objects/LLC_BI__Product__c.object
<CustomObject>
    <description>The Product Object contains information about the specific products in the product catalog and details of the association between products and product types.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CSiDP__lookupKey__c</fullName>
        <description>This optional text field is manually filled out in conjunction with information from CSi for their specific implementation. This field stores the lookup key that corresponds to a product definition within CSi&apos;s Simplicity tool.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field stores the lookup key that corresponds to a product definition within CSi&apos;s Simplicity tool.</inlineHelpText>
        <label>CSi Lookup Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSiDemoCode__c</fullName>
        <description>This field determines the specific transaction for a demo loan with CSi.</description>
        <label>CSiDemoCode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classificationdonotuse__c</fullName>
        <label>Classificationdontuse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classificationproduct__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online Banking</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>HELOC</fullName>
                </value>
                <value>
                    <fullName>Term Loan</fullName>
                </value>
                <value>
                    <fullName>LOC</fullName>
                </value>
                <value>
                    <fullName>Treasury Service</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_App__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to determine the default landing page for this loan within the nCino User Interface.</description>
        <inlineHelpText>This field determines the default page within the nCino User Interface for this record.</inlineHelpText>
        <label>Default Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Rate_Structure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional lookup field references the deposit rate structure for this product.</description>
        <label>Deposit Rate Structure</label>
        <referenceTo>LLC_BI__Deposit_Rate_Structure__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Disable_Id_Document_Save__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators populate this checkbox to prevent an ID Document from saving to its placeholder in Document Manager after an ID validates through ID Scan.</description>
        <inlineHelpText>Select this checkbox to prevent an ID Document from saving into Document Manager.</inlineHelpText>
        <label>Disable ID Document Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populate this lookup field to define the Institution to which a product belongs.</description>
        <label>Institution</label>
        <referenceTo>LLC_BI__Institution__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maintenance_App__c</fullName>
        <description>This field automatically populates via the treasury maintenance configuration. It associates converted treasury services to product-specific maintenance actions. This field corresponds to the unique app name on the route object to control what is displayed to users. Default is null.</description>
        <label>Maintenance App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Funding_Amount__c</fullName>
        <description>Manually populate this currency field with the maximum amount allowed to fund this product.</description>
        <label>Maximum Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Funding_Amount__c</fullName>
        <description>Manually populate this currency field with the minimum amount required to fund this product.</description>
        <label>Minimum Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Disclosures_Description__c</fullName>
        <description>The user populates this optional field with a description of the other disclosure the account holder(s) will acknowledge receipt of on the signature card.</description>
        <inlineHelpText>Enter a description of the other disclosure the account holder(s) will acknowledge receipt of on the signature card.</inlineHelpText>
        <label>Other Disclosures Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Disclosures_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Administrators populate this optional boolean field to acknowledge receipt of a disclosure other than the disclosures predefined on the signature card. By default, it is false.</description>
        <inlineHelpText>Select this field to acknowledge receipt of a disclosure other than the disclosures predefined on the signature card.</inlineHelpText>
        <label>Other Disclosures Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Feature__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional and is manually populated. This field is a lookup used to associate a product feature to the product. A product feature is used to attach attributes to the product.</description>
        <label>Product Feature</label>
        <referenceTo>LLC_BI__Product_Feature__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line_Name__c</fullName>
        <description>This field is required. The user manually populates this field. It represents the name of the product line.</description>
        <formula>LLC_BI__Product_Type__r.LLC_BI__Product_Line__r.Name</formula>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type_Name__c</fullName>
        <description>This field is required. The user manually populates this field. It represents the name of the product type.</description>
        <formula>LLC_BI__Product_Type__r.Name</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <description>This field is required and is manually populated. This field is a master detail field that is used to associate the product with a product type.</description>
        <label>Product Type</label>
        <referenceTo>LLC_BI__Product_Type__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RealEstate_Type__c</fullName>
        <description>This field is no longer in use. Previously, it was used to specify what type of real estate is involved with this product.</description>
        <inlineHelpText>If this product has real estate involved, what type of real estate. Note: If anything besides &quot;None&quot; is checked, then a hidden &quot;Real Estate&quot; checkbox field will be set to true.</inlineHelpText>
        <label>Real Estate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__RealEstate__c</fullName>
        <description>This field is automatically set by LLC_BI__RealEstate_Type__c via a formula. This field is a text (true or false) field that is used to specify whether the product is considered a Real Estate type.</description>
        <formula>IF( ISPICKVAL(LLC_BI__RealEstate_Type__c, &apos;None&apos;), &quot;false&quot;,
IF(ISPICKVAL(LLC_BI__RealEstate_Type__c, &apos;&apos;), &quot;false&quot;, &quot;true&quot;   )
)</formula>
        <inlineHelpText>T/F</inlineHelpText>
        <label>Real Estate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Screen_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the Screen Section that relates to this Product.</description>
        <label>Screen Section</label>
        <referenceTo>nFORCE__Screen_Section__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsecured_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsecured Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WKDDP__Description__c</fullName>
        <description>Administrators enter a description of the account product in this optional text field.</description>
        <inlineHelpText>Enter a description of the account product.</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nPortal__Can_Pledge_Multiple_Collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to indicate that when a Customer Portal user is applying for this product, they can pledge multiple pieces of collateral.</description>
        <inlineHelpText>Select this checkbox to indicate that when a Customer Portal user is applying for this product, they can pledge multiple pieces of collateral.</inlineHelpText>
        <label>Can Pledge Multiple Collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__External_Name__c</fullName>
        <description>This field is optional but recommended. Enter the product name that external Portal users should see. When populated, the external name is displayed in place of the standard product name.</description>
        <inlineHelpText>Enter the product name that should be displayed to external users in Customer Portal. If no name is provided here, the internal product name will be shown.</inlineHelpText>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Approval_Next_Steps__c</fullName>
        <description>Use this rich text field to configure the approval message shown when the online application is approved through auto decision.</description>
        <inlineHelpText>Use this rich text field to configure the approval message when auto decision approves the online application.</inlineHelpText>
        <label>OA Approval Next Steps</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Auto_Decision_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox field to indicate if auto-decision is being used for online applications for this product.</description>
        <inlineHelpText>Select this checkbox field to indicate if auto-decision is being used for online applications for this product.</inlineHelpText>
        <label>OA Auto Decision Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Collapsed_Offer_Card_Summary__c</fullName>
        <description>Administrators populate this field set to display the fields that appear on the collapsed offers card in Online Application.</description>
        <inlineHelpText>Enter the API name for the collapsed offer card field set.</inlineHelpText>
        <label>OA Collapsed Offers Card Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Collateral_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, this checkbox field indicates that collateral is required for this product during an online application workflow.</description>
        <inlineHelpText>Select this checkbox if the user must add collateral during an online application for this product.</inlineHelpText>
        <label>OA Collateral Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Deposit_Funding_Failure_Next_Steps__c</fullName>
        <description>Manually populate this rich text field with the deposit funding next steps message that displays when trial deposits have not successfully processed.</description>
        <label>OA Deposit Funding Failure Next Steps</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Deposit_Funding_Next_Steps__c</fullName>
        <description>Use this rich text field to configure the deposit funding next steps message when trial deposits have been initiated.</description>
        <label>OA Deposit Funding Next Steps</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Expanded_Offer_Summary_Card__c</fullName>
        <description>Administrators populate this field set to display the additional fields that appear on the expanded offers card in Online Application.</description>
        <inlineHelpText>Enter the API name for the expanded offer card field set.</inlineHelpText>
        <label>OA Expanded Offers Summary Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Offers_Accepted_Next_Steps__c</fullName>
        <description>Administrators populate this rich text field to display the offers accepted message after offers are generated and accepted in an Online Application.</description>
        <inlineHelpText>Enter an offers accepted message.</inlineHelpText>
        <label>OA Offers Accepted Next Steps</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Offers_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators populate this checkbox field to determine if offers can generate in Online Application for the product it is assigned to.</description>
        <inlineHelpText>Select this checkbox field to indicate if offers automatically generate in online applications for this product.</inlineHelpText>
        <label>OA Offers Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Product_Image__c</fullName>
        <description>Populate this field with the URL for the image that should display for this product in an online application.</description>
        <inlineHelpText>For an image hosted online, use the image URL. Alternately, upload an image to Documents, make image visibility public, and populate the field with the image URL.</inlineHelpText>
        <label>OA Product Image</label>
        <length>2083</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nPortal__Online_Application_AS_Screen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is manually populated. Use it to define the screen that is displayed for the specific ancillary service in an online application.</description>
        <label>OA Ancillary Service Screen</label>
        <referenceTo>nFORCE__Screen__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__Online_Application_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate if the product is
           available for use in Customer Portal.</description>
        <inlineHelpText>Check this field to enable this product for Customer Portal online applications.</inlineHelpText>
        <label>Online Application Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Online_Application_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup which maps to a UI Framework Group record that represents the Online Application used for this Product.</description>
        <label>Online Application Group</label>
        <referenceTo>nFORCE__Group__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__Online_Application_Header_Text__c</fullName>
        <description>Header text that appears on the Self Registration page for this product.</description>
        <inlineHelpText>Enter Header text to be displayed on the Self Registration page for this product.</inlineHelpText>
        <label>Online Application Header Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Online_Application_Subheader_Text__c</fullName>
        <description>Subheader text that appears beneath the Online Application Header Text on the Self Registration page for this product.</description>
        <inlineHelpText>Enter Subheader text to be displayed beneath the Header text on the Self Registration page for this product.</inlineHelpText>
        <label>Online Application Subheader Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nPortal__Online_Application_Topbar_Fieldset__c</fullName>
        <description>Use this field to manually populate the name of the field set used to display a summary of information about this product in the Online Application topbar. This field set must be created during implementation time. This replaces the default field set with a field set specifically for that product&apos;s online application.</description>
        <inlineHelpText>Enter the name of the existing field set that should be used to render a summary of this product in the Online Applications topbar. If one is not entered, the default field set will be used.</inlineHelpText>
        <label>Online Application Topbar Fieldset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Online_Application_Topbar_Text__c</fullName>
        <description>Populate this field with header text that appears in the topbar for online applications for this product. This field is optional but recommended. If left blank, the default topbar text is displayed instead.</description>
        <inlineHelpText>Enter the text you would like to display in the topbar in Online Applications for this product. If left blank, the default topbar text will be displayed.</inlineHelpText>
        <label>Online Application Topbar Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Online_Application_Type__c</fullName>
        <description>Use this picklist field to select the type of online application appropriate for this product. For example, a deposit product should be assigned the Online Deposit Application type. Your selection ensures that the correct records are created when a Portal user starts an application.</description>
        <label>Online Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online Deposit Application</fullName>
                </value>
                <value>
                    <fullName>Online Loan Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nPortal__Online_Application_Your_Account_Fieldset__c</fullName>
        <description>Populate this field with the name of the field set that should be used to summarize this product on the Your Account page.</description>
        <inlineHelpText>Enter the name of the existing field set that should be used to render a summary of this product in the Your Account page. If one is not entered, the default field set will be used.</inlineHelpText>
        <label>Online Application Your Account Fieldset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Product_Marketing__c</fullName>
        <description>This rich text field should be populated with product marketing copy about the product. This copy is displayed to Customer Portal users in Marketplace cards on the customer dashboard.</description>
        <inlineHelpText>Enter the content you wish to display to Customer Portal users interested in applying for this product. This is a rich text field.</inlineHelpText>
        <label>Product Marketing</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nPortal__Suggested_Collateral_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to indicate that when a Customer Portal user is applying for this product, they should be able to see applicable suggested collateral.</description>
        <inlineHelpText>Select this checkbox to indicate that when a Customer Portal user is applying for this product, they should be able to see applicable suggested collateral.</inlineHelpText>
        <label>Suggested Collateral Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Your_Products_Component_Field_Set__c</fullName>
        <description>This is the field set that is displayed on the Your Products component on the Customer Engagement Solution dashboard.</description>
        <inlineHelpText>Enter the API name of the field set to be displayed on the Your Products component of the Customer Engagement Solution dashboard.</inlineHelpText>
        <label>Your Products Component Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__eTran_Value__c</fullName>
        <description>This is the SBA eTran specific code that represents this product.</description>
        <inlineHelpText>This is the SBA eTran specific code that represents this product.</inlineHelpText>
        <label>eTran Value Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All_Personal_Products</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product_Line_Name__c</columns>
        <columns>LLC_BI__Product_Feature__c</columns>
        <columns>Classificationproduct__c</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <columns>nPortal__Online_Application_Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Personal Products</label>
    </listViews>
    <listViews>
        <fullName>All_Products</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Institution__c</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>LLC_BI__Product_Line_Name__c</columns>
        <columns>LLC_BI__Screen_Section__c</columns>
        <columns>LLC_BI__Product_Feature__c</columns>
        <columns>nPortal__Online_Application_Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <language>en_AU</language>
    </listViews>
    <listViews>
        <fullName>Mortgage_Products</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>nPortal__Online_Application_Group__c</columns>
        <columns>nPortal__OA_Offers_Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Product_Line_Name__c</field>
            <operation>equals</operation>
            <value>Mortgage</value>
        </filters>
        <label>Mortgage Products</label>
        <language>en_AU</language>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <recordTypes>
        <fullName>Deposit_Product_Layout</fullName>
        <active>true</active>
        <description>Used for Deposit Products</description>
        <label>Deposit Product Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan_Product_Layout</fullName>
        <active>true</active>
        <description>Used for Loan Products</description>
        <label>Loan Product Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Treasury_Layout</fullName>
        <active>true</active>
        <description>Used for Treasury Products</description>
        <label>Treasury Layout</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>